// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test AfficherMessage > Doit afficher les messages attention 1`] = `
<div>
  <section
    aria-atomic="false"
    aria-label="Notifications Alt+T"
    aria-live="polite"
    aria-relevant="additions text"
    class="Toastify"
    id="toastContainer-principal"
  >
    <div
      class="Toastify__toast-container Toastify__toast-container--top-center toast-container"
      tabindex="-1"
    >
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--warning Toastify__toast--close-on-click warning Toastify--animate Toastify__bounce-enter--top-center"
        data-in="true"
        id="17"
        role="alert"
        tabindex="0"
      >
        <div
          class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
        >
          <svg
            fill="var(--toastify-icon-color-warning)"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
          >
            <path
              d="M23.32 17.191L15.438 2.184C14.728.833 13.416 0 11.996 0c-1.42 0-2.733.833-3.443 2.184L.533 17.448a4.744 4.744 0 000 4.368C1.243 23.167 2.555 24 3.975 24h16.05C22.22 24 24 22.044 24 19.632c0-.904-.251-1.746-.68-2.44zm-9.622 1.46c0 1.033-.724 1.823-1.698 1.823s-1.698-.79-1.698-1.822v-.043c0-1.028.724-1.822 1.698-1.822s1.698.79 1.698 1.822v.043zm.039-12.285l-.84 8.06c-.057.581-.408.943-.897.943-.49 0-.84-.367-.896-.942l-.84-8.065c-.057-.624.25-1.095.779-1.095h1.91c.528.005.84.476.784 1.1z"
            />
          </svg>
        </div>
        <div
          class="w-full text-center"
        >
          <div
            class="mb-3 text-lg font-bold"
          >
            Attention
          </div>
          <div>
            multiples messages attention C
          </div>
          <div>
            multiples messages attention D
          </div>
        </div>
        <button
          aria-label="close"
          class="Toastify__close-button Toastify__close-button--light"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 14 16"
          >
            <path
              d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="false"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--warning"
          />
          <div
            aria-hidden="false"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--warning"
            role="progressbar"
            style="animation-duration: 10000ms; animation-play-state: paused;"
          />
        </div>
      </div>
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--warning Toastify__toast--close-on-click warning Toastify--animate Toastify__bounce-enter--top-center"
        data-in="true"
        id="16"
        role="alert"
        tabindex="0"
      >
        <div
          class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
        >
          <svg
            fill="var(--toastify-icon-color-warning)"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
          >
            <path
              d="M23.32 17.191L15.438 2.184C14.728.833 13.416 0 11.996 0c-1.42 0-2.733.833-3.443 2.184L.533 17.448a4.744 4.744 0 000 4.368C1.243 23.167 2.555 24 3.975 24h16.05C22.22 24 24 22.044 24 19.632c0-.904-.251-1.746-.68-2.44zm-9.622 1.46c0 1.033-.724 1.823-1.698 1.823s-1.698-.79-1.698-1.822v-.043c0-1.028.724-1.822 1.698-1.822s1.698.79 1.698 1.822v.043zm.039-12.285l-.84 8.06c-.057.581-.408.943-.897.943-.49 0-.84-.367-.896-.942l-.84-8.065c-.057-.624.25-1.095.779-1.095h1.91c.528.005.84.476.784 1.1z"
            />
          </svg>
        </div>
        <div
          class="w-full text-center"
        >
          <div
            class="mb-3 text-lg font-bold"
          >
            Attention
          </div>
          <div>
            multiples messages attention A
          </div>
          <div>
            multiples messages attention B
          </div>
        </div>
        <button
          aria-label="close"
          class="Toastify__close-button Toastify__close-button--light"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 14 16"
          >
            <path
              d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="true"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--warning"
          />
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--controlled Toastify__progress-bar-theme--light Toastify__progress-bar--warning"
            role="progressbar"
            style="animation-duration: falsems; animation-play-state: paused; transform: scaleX(0);"
          />
        </div>
      </div>
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--warning Toastify__toast--close-on-click warning Toastify--animate Toastify__bounce-enter--top-center"
        data-in="true"
        id="15"
        role="alert"
        tabindex="0"
      >
        <div
          class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
        >
          <svg
            fill="var(--toastify-icon-color-warning)"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
          >
            <path
              d="M23.32 17.191L15.438 2.184C14.728.833 13.416 0 11.996 0c-1.42 0-2.733.833-3.443 2.184L.533 17.448a4.744 4.744 0 000 4.368C1.243 23.167 2.555 24 3.975 24h16.05C22.22 24 24 22.044 24 19.632c0-.904-.251-1.746-.68-2.44zm-9.622 1.46c0 1.033-.724 1.823-1.698 1.823s-1.698-.79-1.698-1.822v-.043c0-1.028.724-1.822 1.698-1.822s1.698.79 1.698 1.822v.043zm.039-12.285l-.84 8.06c-.057.581-.408.943-.897.943-.49 0-.84-.367-.896-.942l-.84-8.065c-.057-.624.25-1.095.779-1.095h1.91c.528.005.84.476.784 1.1z"
            />
          </svg>
        </div>
        <div
          class="w-full text-center"
        >
          <div
            class="mb-3 text-lg font-bold"
          >
            Attention
          </div>
          <div>
            Simple message info attention fermetureAuto
          </div>
        </div>
        <button
          aria-label="close"
          class="Toastify__close-button Toastify__close-button--light"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 14 16"
          >
            <path
              d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="false"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--warning"
          />
          <div
            aria-hidden="false"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--warning"
            role="progressbar"
            style="animation-duration: 10000ms; animation-play-state: paused;"
          />
        </div>
      </div>
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--warning Toastify__toast--close-on-click warning Toastify--animate Toastify__bounce-enter--top-center"
        data-in="true"
        id="14"
        role="alert"
        tabindex="0"
      >
        <div
          class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
        >
          <svg
            fill="var(--toastify-icon-color-warning)"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
          >
            <path
              d="M23.32 17.191L15.438 2.184C14.728.833 13.416 0 11.996 0c-1.42 0-2.733.833-3.443 2.184L.533 17.448a4.744 4.744 0 000 4.368C1.243 23.167 2.555 24 3.975 24h16.05C22.22 24 24 22.044 24 19.632c0-.904-.251-1.746-.68-2.44zm-9.622 1.46c0 1.033-.724 1.823-1.698 1.823s-1.698-.79-1.698-1.822v-.043c0-1.028.724-1.822 1.698-1.822s1.698.79 1.698 1.822v.043zm.039-12.285l-.84 8.06c-.057.581-.408.943-.897.943-.49 0-.84-.367-.896-.942l-.84-8.065c-.057-.624.25-1.095.779-1.095h1.91c.528.005.84.476.784 1.1z"
            />
          </svg>
        </div>
        <div
          class="w-full text-center"
        >
          <div
            class="mb-3 text-lg font-bold"
          >
            Attention
          </div>
          <div>
            Simple message attention
          </div>
        </div>
        <button
          aria-label="close"
          class="Toastify__close-button Toastify__close-button--light"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 14 16"
          >
            <path
              d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="true"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--warning"
          />
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--controlled Toastify__progress-bar-theme--light Toastify__progress-bar--warning"
            role="progressbar"
            style="animation-duration: falsems; animation-play-state: paused; transform: scaleX(0);"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`test AfficherMessage > Doit afficher les messages d'erreur 1`] = `
<div>
  <section
    aria-atomic="false"
    aria-label="Notifications Alt+T"
    aria-live="polite"
    aria-relevant="additions text"
    class="Toastify"
    id="toastContainer-principal"
  >
    <div
      class="Toastify__toast-container Toastify__toast-container--top-center toast-container"
      tabindex="-1"
    >
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--error Toastify__toast--close-on-click error Toastify--animate Toastify__bounce-enter--top-center"
        data-in="true"
        id="5"
        role="alert"
        tabindex="0"
      >
        <div
          class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
        >
          <svg
            fill="var(--toastify-icon-color-error)"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
          >
            <path
              d="M11.983 0a12.206 12.206 0 00-8.51 3.653A11.8 11.8 0 000 12.207 11.779 11.779 0 0011.8 24h.214A12.111 12.111 0 0024 11.791 11.766 11.766 0 0011.983 0zM10.5 16.542a1.476 1.476 0 011.449-1.53h.027a1.527 1.527 0 011.523 1.47 1.475 1.475 0 01-1.449 1.53h-.027a1.529 1.529 0 01-1.523-1.47zM11 12.5v-6a1 1 0 012 0v6a1 1 0 11-2 0z"
            />
          </svg>
        </div>
        <div
          class="w-full text-center"
        >
          <div
            class="mb-3 text-lg font-bold"
          >
            Erreur
          </div>
          <div>
            multiples messages erreur C
          </div>
          <div>
            multiples messages erreur D
          </div>
          <p
            class="mb-1 text-center"
          >
            Codes d’erreur :
            <br />
            FCT_16108, TECH_23001
          </p>
        </div>
        <button
          aria-label="close"
          class="Toastify__close-button Toastify__close-button--light"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 14 16"
          >
            <path
              d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="true"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--error"
          />
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--controlled Toastify__progress-bar-theme--light Toastify__progress-bar--error"
            role="progressbar"
            style="animation-duration: falsems; animation-play-state: paused; transform: scaleX(0);"
          />
        </div>
      </div>
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--error Toastify__toast--close-on-click error Toastify--animate Toastify__bounce-enter--top-center"
        data-in="true"
        id="4"
        role="alert"
        tabindex="0"
      >
        <div
          class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
        >
          <svg
            fill="var(--toastify-icon-color-error)"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
          >
            <path
              d="M11.983 0a12.206 12.206 0 00-8.51 3.653A11.8 11.8 0 000 12.207 11.779 11.779 0 0011.8 24h.214A12.111 12.111 0 0024 11.791 11.766 11.766 0 0011.983 0zM10.5 16.542a1.476 1.476 0 011.449-1.53h.027a1.527 1.527 0 011.523 1.47 1.475 1.475 0 01-1.449 1.53h-.027a1.529 1.529 0 01-1.523-1.47zM11 12.5v-6a1 1 0 012 0v6a1 1 0 11-2 0z"
            />
          </svg>
        </div>
        <div
          class="w-full text-center"
        >
          <div
            class="mb-3 text-lg font-bold"
          >
            Erreur
          </div>
          <div>
            multiples messages erreur A
          </div>
          <div>
            multiples messages erreur B
          </div>
        </div>
        <button
          aria-label="close"
          class="Toastify__close-button Toastify__close-button--light"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 14 16"
          >
            <path
              d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="true"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--error"
          />
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--controlled Toastify__progress-bar-theme--light Toastify__progress-bar--error"
            role="progressbar"
            style="animation-duration: falsems; animation-play-state: paused; transform: scaleX(0);"
          />
        </div>
      </div>
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--error Toastify__toast--close-on-click error Toastify--animate Toastify__bounce-enter--top-center"
        data-in="true"
        id="3"
        role="alert"
        tabindex="0"
      >
        <div
          class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
        >
          <svg
            fill="var(--toastify-icon-color-error)"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
          >
            <path
              d="M11.983 0a12.206 12.206 0 00-8.51 3.653A11.8 11.8 0 000 12.207 11.779 11.779 0 0011.8 24h.214A12.111 12.111 0 0024 11.791 11.766 11.766 0 0011.983 0zM10.5 16.542a1.476 1.476 0 011.449-1.53h.027a1.527 1.527 0 011.523 1.47 1.475 1.475 0 01-1.449 1.53h-.027a1.529 1.529 0 01-1.523-1.47zM11 12.5v-6a1 1 0 012 0v6a1 1 0 11-2 0z"
            />
          </svg>
        </div>
        <div
          class="w-full text-center"
        >
          <div
            class="mb-3 text-lg font-bold"
          >
            Erreur
          </div>
          <div>
            Simple message erreur avec multiple erreurs
          </div>
          <p
            class="mb-1 text-center"
          >
            Codes d’erreur :
            <br />
            FCT_16108, TECH_23001
          </p>
        </div>
        <button
          aria-label="close"
          class="Toastify__close-button Toastify__close-button--light"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 14 16"
          >
            <path
              d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="true"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--error"
          />
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--controlled Toastify__progress-bar-theme--light Toastify__progress-bar--error"
            role="progressbar"
            style="animation-duration: falsems; animation-play-state: paused; transform: scaleX(0);"
          />
        </div>
      </div>
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--error Toastify__toast--close-on-click error Toastify--animate Toastify__bounce-enter--top-center"
        data-in="true"
        id="2"
        role="alert"
        tabindex="0"
      >
        <div
          class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
        >
          <svg
            fill="var(--toastify-icon-color-error)"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
          >
            <path
              d="M11.983 0a12.206 12.206 0 00-8.51 3.653A11.8 11.8 0 000 12.207 11.779 11.779 0 0011.8 24h.214A12.111 12.111 0 0024 11.791 11.766 11.766 0 0011.983 0zM10.5 16.542a1.476 1.476 0 011.449-1.53h.027a1.527 1.527 0 011.523 1.47 1.475 1.475 0 01-1.449 1.53h-.027a1.529 1.529 0 01-1.523-1.47zM11 12.5v-6a1 1 0 012 0v6a1 1 0 11-2 0z"
            />
          </svg>
        </div>
        <div
          class="w-full text-center"
        >
          <div
            class="mb-3 text-lg font-bold"
          >
            Erreur
          </div>
          <div>
            Simple message erreur avec un erreur
          </div>
          <p
            class="mb-1 text-center"
          >
            Codes d’erreur :
            <br />
            FCT_16108
          </p>
        </div>
        <button
          aria-label="close"
          class="Toastify__close-button Toastify__close-button--light"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 14 16"
          >
            <path
              d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="true"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--error"
          />
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--controlled Toastify__progress-bar-theme--light Toastify__progress-bar--error"
            role="progressbar"
            style="animation-duration: falsems; animation-play-state: paused; transform: scaleX(0);"
          />
        </div>
      </div>
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--error Toastify__toast--close-on-click error Toastify--animate Toastify__bounce-enter--top-center"
        data-in="true"
        id="1"
        role="alert"
        tabindex="0"
      >
        <div
          class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
        >
          <svg
            fill="var(--toastify-icon-color-error)"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
          >
            <path
              d="M11.983 0a12.206 12.206 0 00-8.51 3.653A11.8 11.8 0 000 12.207 11.779 11.779 0 0011.8 24h.214A12.111 12.111 0 0024 11.791 11.766 11.766 0 0011.983 0zM10.5 16.542a1.476 1.476 0 011.449-1.53h.027a1.527 1.527 0 011.523 1.47 1.475 1.475 0 01-1.449 1.53h-.027a1.529 1.529 0 01-1.523-1.47zM11 12.5v-6a1 1 0 012 0v6a1 1 0 11-2 0z"
            />
          </svg>
        </div>
        <div
          class="w-full text-center"
        >
          <div
            class="mb-3 text-lg font-bold"
          >
            Erreur
          </div>
          <div>
            Simple message erreur
          </div>
        </div>
        <button
          aria-label="close"
          class="Toastify__close-button Toastify__close-button--light"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 14 16"
          >
            <path
              d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="true"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--error"
          />
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--controlled Toastify__progress-bar-theme--light Toastify__progress-bar--error"
            role="progressbar"
            style="animation-duration: falsems; animation-play-state: paused; transform: scaleX(0);"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`test AfficherMessage > Doit afficher les messages info 1`] = `
<div>
  <section
    aria-atomic="false"
    aria-label="Notifications Alt+T"
    aria-live="polite"
    aria-relevant="additions text"
    class="Toastify"
    id="toastContainer-principal"
  >
    <div
      class="Toastify__toast-container Toastify__toast-container--top-center toast-container"
      tabindex="-1"
    >
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--info Toastify__toast--close-on-click info Toastify--animate Toastify__bounce-enter--top-center"
        data-in="true"
        id="13"
        role="alert"
        tabindex="0"
      >
        <div
          class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
        >
          <svg
            fill="var(--toastify-icon-color-info)"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
          >
            <path
              d="M12 0a12 12 0 1012 12A12.013 12.013 0 0012 0zm.25 5a1.5 1.5 0 11-1.5 1.5 1.5 1.5 0 011.5-1.5zm2.25 13.5h-4a1 1 0 010-2h.75a.25.25 0 00.25-.25v-4.5a.25.25 0 00-.25-.25h-.75a1 1 0 010-2h1a2 2 0 012 2v4.75a.25.25 0 00.25.25h.75a1 1 0 110 2z"
            />
          </svg>
        </div>
        <div
          class="w-full text-center"
        >
          <div
            class="mb-3 text-lg font-bold"
          >
            Information
          </div>
          <div>
            multiples messages info C
          </div>
          <div>
            multiples messages info D
          </div>
        </div>
        <button
          aria-label="close"
          class="Toastify__close-button Toastify__close-button--light"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 14 16"
          >
            <path
              d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="false"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--info"
          />
          <div
            aria-hidden="false"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--info"
            role="progressbar"
            style="animation-duration: 10000ms; animation-play-state: paused;"
          />
        </div>
      </div>
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--info Toastify__toast--close-on-click info Toastify--animate Toastify__bounce-enter--top-center"
        data-in="true"
        id="12"
        role="alert"
        tabindex="0"
      >
        <div
          class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
        >
          <svg
            fill="var(--toastify-icon-color-info)"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
          >
            <path
              d="M12 0a12 12 0 1012 12A12.013 12.013 0 0012 0zm.25 5a1.5 1.5 0 11-1.5 1.5 1.5 1.5 0 011.5-1.5zm2.25 13.5h-4a1 1 0 010-2h.75a.25.25 0 00.25-.25v-4.5a.25.25 0 00-.25-.25h-.75a1 1 0 010-2h1a2 2 0 012 2v4.75a.25.25 0 00.25.25h.75a1 1 0 110 2z"
            />
          </svg>
        </div>
        <div
          class="w-full text-center"
        >
          <div
            class="mb-3 text-lg font-bold"
          >
            Information
          </div>
          <div>
            multiples messages info A
          </div>
          <div>
            multiples messages info B
          </div>
        </div>
        <button
          aria-label="close"
          class="Toastify__close-button Toastify__close-button--light"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 14 16"
          >
            <path
              d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="true"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--info"
          />
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--controlled Toastify__progress-bar-theme--light Toastify__progress-bar--info"
            role="progressbar"
            style="animation-duration: falsems; animation-play-state: paused; transform: scaleX(0);"
          />
        </div>
      </div>
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--info Toastify__toast--close-on-click info Toastify--animate Toastify__bounce-enter--top-center"
        data-in="true"
        id="11"
        role="alert"
        tabindex="0"
      >
        <div
          class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
        >
          <svg
            fill="var(--toastify-icon-color-info)"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
          >
            <path
              d="M12 0a12 12 0 1012 12A12.013 12.013 0 0012 0zm.25 5a1.5 1.5 0 11-1.5 1.5 1.5 1.5 0 011.5-1.5zm2.25 13.5h-4a1 1 0 010-2h.75a.25.25 0 00.25-.25v-4.5a.25.25 0 00-.25-.25h-.75a1 1 0 010-2h1a2 2 0 012 2v4.75a.25.25 0 00.25.25h.75a1 1 0 110 2z"
            />
          </svg>
        </div>
        <div
          class="w-full text-center"
        >
          <div
            class="mb-3 text-lg font-bold"
          >
            Information
          </div>
          <div>
            Simple message info avec fermetureAuto
          </div>
        </div>
        <button
          aria-label="close"
          class="Toastify__close-button Toastify__close-button--light"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 14 16"
          >
            <path
              d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="false"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--info"
          />
          <div
            aria-hidden="false"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--info"
            role="progressbar"
            style="animation-duration: 10000ms; animation-play-state: paused;"
          />
        </div>
      </div>
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--info Toastify__toast--close-on-click info Toastify--animate Toastify__bounce-enter--top-center"
        data-in="true"
        id="10"
        role="alert"
        tabindex="0"
      >
        <div
          class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
        >
          <svg
            fill="var(--toastify-icon-color-info)"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
          >
            <path
              d="M12 0a12 12 0 1012 12A12.013 12.013 0 0012 0zm.25 5a1.5 1.5 0 11-1.5 1.5 1.5 1.5 0 011.5-1.5zm2.25 13.5h-4a1 1 0 010-2h.75a.25.25 0 00.25-.25v-4.5a.25.25 0 00-.25-.25h-.75a1 1 0 010-2h1a2 2 0 012 2v4.75a.25.25 0 00.25.25h.75a1 1 0 110 2z"
            />
          </svg>
        </div>
        <div
          class="w-full text-center"
        >
          <div
            class="mb-3 text-lg font-bold"
          >
            Information
          </div>
          <div>
            Simple message info
          </div>
        </div>
        <button
          aria-label="close"
          class="Toastify__close-button Toastify__close-button--light"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 14 16"
          >
            <path
              d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="true"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--info"
          />
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--controlled Toastify__progress-bar-theme--light Toastify__progress-bar--info"
            role="progressbar"
            style="animation-duration: falsems; animation-play-state: paused; transform: scaleX(0);"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`test AfficherMessage > Doit afficher les messages succès 1`] = `
<div>
  <section
    aria-atomic="false"
    aria-label="Notifications Alt+T"
    aria-live="polite"
    aria-relevant="additions text"
    class="Toastify"
    id="toastContainer-principal"
  >
    <div
      class="Toastify__toast-container Toastify__toast-container--top-center toast-container"
      tabindex="-1"
    >
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--success Toastify__toast--close-on-click success Toastify--animate Toastify__bounce-enter--top-center"
        data-in="true"
        id="9"
        role="alert"
        tabindex="0"
      >
        <div
          class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
        >
          <svg
            fill="var(--toastify-icon-color-success)"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
          >
            <path
              d="M12 0a12 12 0 1012 12A12.014 12.014 0 0012 0zm6.927 8.2l-6.845 9.289a1.011 1.011 0 01-1.43.188l-4.888-3.908a1 1 0 111.25-1.562l4.076 3.261 6.227-8.451a1 1 0 111.61 1.183z"
            />
          </svg>
        </div>
        <div
          class="w-full text-center"
        >
          <div
            class="mb-3 text-lg font-bold"
          >
            Succès
          </div>
          <div>
            multiples messages succès C
          </div>
          <div>
            multiples messages succès D
          </div>
        </div>
        <button
          aria-label="close"
          class="Toastify__close-button Toastify__close-button--light"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 14 16"
          >
            <path
              d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="false"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--success"
          />
          <div
            aria-hidden="false"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--success"
            role="progressbar"
            style="animation-duration: 10000ms; animation-play-state: paused;"
          />
        </div>
      </div>
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--success Toastify__toast--close-on-click success Toastify--animate Toastify__bounce-enter--top-center"
        data-in="true"
        id="8"
        role="alert"
        tabindex="0"
      >
        <div
          class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
        >
          <svg
            fill="var(--toastify-icon-color-success)"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
          >
            <path
              d="M12 0a12 12 0 1012 12A12.014 12.014 0 0012 0zm6.927 8.2l-6.845 9.289a1.011 1.011 0 01-1.43.188l-4.888-3.908a1 1 0 111.25-1.562l4.076 3.261 6.227-8.451a1 1 0 111.61 1.183z"
            />
          </svg>
        </div>
        <div
          class="w-full text-center"
        >
          <div
            class="mb-3 text-lg font-bold"
          >
            Succès
          </div>
          <div>
            multiples messages succès A
          </div>
          <div>
            multiples messages succès B
          </div>
        </div>
        <button
          aria-label="close"
          class="Toastify__close-button Toastify__close-button--light"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 14 16"
          >
            <path
              d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="true"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--success"
          />
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--controlled Toastify__progress-bar-theme--light Toastify__progress-bar--success"
            role="progressbar"
            style="animation-duration: falsems; animation-play-state: paused; transform: scaleX(0);"
          />
        </div>
      </div>
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--success Toastify__toast--close-on-click success Toastify--animate Toastify__bounce-enter--top-center"
        data-in="true"
        id="7"
        role="alert"
        tabindex="0"
      >
        <div
          class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
        >
          <svg
            fill="var(--toastify-icon-color-success)"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
          >
            <path
              d="M12 0a12 12 0 1012 12A12.014 12.014 0 0012 0zm6.927 8.2l-6.845 9.289a1.011 1.011 0 01-1.43.188l-4.888-3.908a1 1 0 111.25-1.562l4.076 3.261 6.227-8.451a1 1 0 111.61 1.183z"
            />
          </svg>
        </div>
        <div
          class="w-full text-center"
        >
          <div
            class="mb-3 text-lg font-bold"
          >
            Succès
          </div>
          <div>
            Simple message succès avec fermetureAuto
          </div>
        </div>
        <button
          aria-label="close"
          class="Toastify__close-button Toastify__close-button--light"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 14 16"
          >
            <path
              d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="false"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--success"
          />
          <div
            aria-hidden="false"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--success"
            role="progressbar"
            style="animation-duration: 10000ms; animation-play-state: paused;"
          />
        </div>
      </div>
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--success Toastify__toast--close-on-click success Toastify--animate Toastify__bounce-enter--top-center"
        data-in="true"
        id="6"
        role="alert"
        tabindex="0"
      >
        <div
          class="Toastify__toast-icon Toastify--animate-icon Toastify__zoom-enter"
        >
          <svg
            fill="var(--toastify-icon-color-success)"
            height="100%"
            viewBox="0 0 24 24"
            width="100%"
          >
            <path
              d="M12 0a12 12 0 1012 12A12.014 12.014 0 0012 0zm6.927 8.2l-6.845 9.289a1.011 1.011 0 01-1.43.188l-4.888-3.908a1 1 0 111.25-1.562l4.076 3.261 6.227-8.451a1 1 0 111.61 1.183z"
            />
          </svg>
        </div>
        <div
          class="w-full text-center"
        >
          <div
            class="mb-3 text-lg font-bold"
          >
            Succès
          </div>
          <div>
            Simple message succès
          </div>
        </div>
        <button
          aria-label="close"
          class="Toastify__close-button Toastify__close-button--light"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 14 16"
          >
            <path
              d="M7.71 8.23l3.75 3.75-1.48 1.48-3.75-3.75-3.75 3.75L1 11.98l3.75-3.75L1 4.48 2.48 3l3.75 3.75L9.98 3l1.48 1.48-3.75 3.75z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="true"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--success"
          />
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--controlled Toastify__progress-bar-theme--light Toastify__progress-bar--success"
            role="progressbar"
            style="animation-duration: falsems; animation-play-state: paused; transform: scaleX(0);"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;
